--- a/app/src/main/res/layout/activity_new_profile.xml
+++ b/app/src/main/res/layout/activity_new_profile.xml
@@ -31,6 +31,7 @@
                 android:layout_width="140dp"
                 android:layout_height="130dp"
                 android:layout_marginTop="10dp"
+                android:background="@drawable/custom_profile_background"
                 android:src="@drawable/ic_baseline_account_circle_24" />
 
             <Button
