--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -16,6 +16,7 @@
         android:layout_height="178dp"
         android:layout_marginTop="10dp"
         android:id="@+id/imgProfile"
+        android:background="@drawable/custom_profile_background"
         android:src="@drawable/ic_baseline_account_circle_24"/>
 
     <!--Profile Name-->
