--- a/app/src/main/res/layout/activity_request_blood.xml
+++ b/app/src/main/res/layout/activity_request_blood.xml
@@ -7,7 +7,6 @@
     android:background="@drawable/bg_sign_up"
     android:orientation="vertical"
     android:gravity="center"
-
     tools:context=".RequestBloodActivity">
 
 
@@ -78,7 +77,7 @@
                 android:textStyle="bold" />-->
 
             <EditText
-                android:id="@+id/txtName"
+                android:id="@+id/edtName"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:drawableStart="@drawable/ic_baseline_account_circle_24"
@@ -144,7 +143,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />-->
             <EditText
-                android:id="@+id/edtBloodGroup"
+                android:id="@+id/edtBloodType"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="2dp"
@@ -162,7 +161,7 @@
                 android:layout_marginTop="2dp"
                 android:drawableStart="@drawable/ic_baseline_alarm_24"
                 android:drawablePadding="8dp"
-                android:hint="Blood Type"
+                android:hint="Urgency"
                 android:padding="8dp"
                 android:textColor="@color/black"
                 android:textSize="14sp" />
@@ -179,7 +178,7 @@
                 android:textSize="14sp"
                 android:inputType="textMultiLine"/>
             <Button
-                android:id="@+id/btnSignUp"
+                android:id="@+id/btnRequestBlood"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="40dp"
