--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -11,13 +11,18 @@
     tools:context=".ProfileActivity">
 
     <!--Profile Image-->
+    <androidx.cardview.widget.CardView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:cardCornerRadius="180dp"
+        android:layout_marginTop="10dp">
     <ImageView
-        android:layout_width="172dp"
-        android:layout_height="178dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/imgProfile"
-        android:background="@drawable/custom_profile_background"
+        android:scaleType="centerCrop"
         android:src="@drawable/ic_baseline_account_circle_24"/>
+    </androidx.cardview.widget.CardView>
 
     <!--Profile Name-->
     <TextView
