--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.HemoShare" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.HemoShare" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#EF4B4B</item>
         <item name="colorPrimaryVariant">#E19991</item>
