--- a/app/src/main/res/layout/activity_new_profile.xml
+++ b/app/src/main/res/layout/activity_new_profile.xml
@@ -175,6 +175,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:drawableStart="@drawable/ic_baseline_birthdate"
+                android:focusableInTouchMode="false"
                 android:drawablePadding="8dp"
                 android:editable="false"
                 android:hint="Birth Date"
