--- a/app/src/main/res/layout/activity_select_location.xml
+++ b/app/src/main/res/layout/activity_select_location.xml
@@ -4,53 +4,72 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/bg_sign_up"
     android:gravity="center"
+    android:orientation="vertical"
     tools:context=".SelectLocationActivity">
 
-<androidx.cardview.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="400dp"
-    android:layout_margin="20dp"
-    app:cardCornerRadius="30dp">
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="450dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="10dp"
+        app:cardCornerRadius="30dp">
+
         <fragment
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:id="@+id/google_map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"/>
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </androidx.cardview.widget.CardView>
 
-    <com.google.android.material.textfield.TextInputLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:errorEnabled="true"
-        android:id="@+id/tilLocation"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="10dp"
         android:backgroundTint="@color/cream"
-        app:startIconDrawable="@drawable/ic_baseline_location_24"
-        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
-        android:layout_margin="20dp"
-        android:hint="Location">
+        app:cardCornerRadius="30dp">
 
-        <AutoCompleteTextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/actvLocation"
-            android:focusableInTouchMode="false"
-            android:textSize="14sp"
-            android:lines="4"
-            android:maxLines="3"
-            android:inputType="none"
-            tools:ignore="TouchTargetSizeCheck" />
+            android:orientation="vertical"
+            android:gravity="center"
+            android:padding="20dp">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilLocation"
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:backgroundTint="@color/cream"
+                android:hint="Location"
+                app:errorEnabled="true"
+                app:startIconDrawable="@drawable/ic_baseline_location_24">
 
-     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-         style="@style/Widget.Material3.Button.ElevatedButton"
-        android:text="Select Location"
-        android:id="@+id/btnSelectLocation" />
+                <AutoCompleteTextView
+                    android:id="@+id/actvLocation"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:focusableInTouchMode="false"
+                    android:inputType="none"
+                    android:lines="4"
+                    android:maxLines="3"
+                    android:textSize="14sp"
+                    tools:ignore="TouchTargetSizeCheck" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/btnSelectLocation"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="30dp"
+                android:text="Select Location" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
