--- a/app/src/main/res/layout/activity_request_accepted_user.xml
+++ b/app/src/main/res/layout/activity_request_accepted_user.xml
@@ -4,13 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RequestDetailsActivity">
-
-    <fragment
-        android:id="@+id/google_map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    tools:context=".RequestAcceptedUserActivity">
 
 
     <androidx.cardview.widget.CardView
@@ -18,7 +12,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="30dp"
         android:backgroundTint="@color/cream"
@@ -27,10 +20,10 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:padding="5dp"
+            android:layout_margin="5dp"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="5dp">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="wrap_content"
@@ -40,42 +33,31 @@
                 android:padding="10dp"
                 android:weightSum="5">
 
+
+
+
                 <com.google.android.material.textview.MaterialTextView
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Om Parab"
-                    android:id="@+id/txvName"
+                    android:textAlignment="center"
+                    android:text="Go to above loction to donate the blood"
                     android:textSize="16sp"
+
                     android:textStyle="bold" />
-
-                <com.google.android.material.textview.MaterialTextView
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=" Needs "
-
-                    android:textSize="14sp" />
-
-                <com.google.android.material.textview.MaterialTextView
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="AB+"
-                    android:id="@+id/txvBloodGroup"
-                    android:textColor="@color/red"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-
-                <com.google.android.material.textview.MaterialTextView
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=" Blood"
-
-                    android:textSize="14sp" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
+            <com.google.android.material.textview.MaterialTextView
+
+                android:id="@+id/txvName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:drawableStart="@drawable/ic_baseline_account_circle_24"
+                android:drawablePadding="5dp"
+                android:maxHeight="90dp"
+                android:text="Om "
+                android:textSize="14sp" />
 
 
             <androidx.appcompat.widget.LinearLayoutCompat
@@ -94,9 +76,9 @@
 
                     <com.google.android.material.textview.MaterialTextView
 
+                        android:id="@+id/txvPhoneNumber"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/txvPhoneNumber"
                         android:layout_margin="10dp"
                         android:drawableStart="@drawable/ic_baseline_phone_24"
                         android:drawablePadding="5dp"
@@ -107,10 +89,11 @@
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
+
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnCall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/btnCall"
 
                     android:text="Call"
                     android:textSize="14sp"
@@ -120,10 +103,10 @@
 
             <com.google.android.material.textview.MaterialTextView
 
+                android:id="@+id/txvAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/txvAddress"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
                 android:drawableStart="@drawable/ic_baseline_location_24"
                 android:drawablePadding="5dp"
                 android:maxHeight="90dp"
@@ -132,38 +115,53 @@
 
             <com.google.android.material.textview.MaterialTextView
 
+                android:id="@+id/txvNote"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/txvNote"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
                 android:drawableStart="@drawable/ic_baseline_edit_note_24"
                 android:drawablePadding="5dp"
                 android:maxHeight="90dp"
                 android:text="hellod this is my addressdfjfjkjfkdjfkjfkjfkdjjdfkdjfkjkfjkjdfjfkj"
                 android:textSize="14sp" />
+
+
+            <com.google.android.material.textview.MaterialTextView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:maxHeight="90dp"
+                android:text="After donating the blood get the code from the person"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textSize="16sp" />
+
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center">
+
                 <Button
+                    android:id="@+id/btnEnterCode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/btnDeclineRequest"
-                    android:layout_marginVertical="10dp"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_marginVertical="5dp"
                     android:padding="10dp"
-                    android:layout_marginHorizontal="20dp"
-                    android:text="DECLINE"
+                    android:text="ENTER CODE"
                     android:textSize="14sp" />
+
                 <Button
+                    android:id="@+id/btnGetDirection"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/btnAcceptRequest"
                     android:layout_marginVertical="10dp"
-                    android:backgroundTint="#4CAF50"
-                    android:padding="10dp"
-                    android:layout_marginHorizontal="20dp"
-                    android:text="ACCEPT"
-                    android:textSize="14sp" />
+                    android:backgroundTint="#2284D2"
+                    android:drawableLeft="@drawable/outline_directions_24"
+                    android:drawableTint="@color/cream"
+                    android:text="GET DIRECTIONS"
+                    android:textSize="12sp" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
