--- a/app/src/main/res/layout/activity_new_profile.xml
+++ b/app/src/main/res/layout/activity_new_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center_horizontal"
+    android:gravity="center"
     android:background="@drawable/bg_sign_up"
     tools:context=".NewProfileActivity">
 
@@ -25,14 +25,20 @@
             android:gravity="center_horizontal"
             android:layout_weight="1">
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                app:cardCornerRadius="110dp"
+                android:layout_margin="8dp">
 
             <ImageView
                 android:id="@+id/imgProfile"
-                android:layout_width="140dp"
-                android:layout_height="130dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/custom_profile_background"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_baseline_account_circle_24" />
+
+            </androidx.cardview.widget.CardView>
 
             <Button
                 android:id="@+id/btnImgSelect"
@@ -42,6 +48,15 @@
                 android:text="Profile Picture"
                 android:layout_marginHorizontal="5dp"
                 app:cornerRadius="50dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/errorText"
+                android:text="*Please select a picture "
+                android:visibility="invisible"
+                android:textColor="@color/black"
+                android:textSize="8sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -55,6 +70,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/txvEditOrComplete"
                 android:text="Complete Your"
                 android:textColor="#F44336"
                 android:textSize="20sp"
@@ -91,7 +107,7 @@
             android:padding="20dp">
 
 
-            <EditText
+            <!--<EditText
                 android:id="@+id/edtName"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -101,7 +117,22 @@
                 android:inputType="text"
                 android:padding="8dp"
                 android:textColor="@color/black"
-                android:textSize="14sp" />
+                android:textSize="14sp" />-->
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tilName"
+                app:errorEnabled="true"
+                android:hint="Name"
+                app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
+                app:startIconTint="@color/red">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="14sp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <!--Email Entry Field-->
             <LinearLayout
@@ -113,20 +144,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
-                >
-
-                <EditText
-                    android:id="@+id/edtEmail"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:drawableStart="@drawable/ic_baseline_email_24"
-                    android:drawablePadding="8dp"
-                    android:hint="Email"
-                    android:inputType="textEmailAddress"
-                    android:padding="8dp"
-                    android:textColor="@color/black"
-                    android:textSize="14sp" />
-                </LinearLayout>
+                />
 
                 <!--<LinearLayout
                     android:layout_width="0dp"
@@ -142,20 +160,27 @@
             </LinearLayout>
 
     <!--Phone Number Entry Field-->
-    <EditText
-                android:id="@+id/edtPhoneNumber"
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:drawableStart="@drawable/ic_baseline_phone_24"
-                android:drawablePadding="8dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/tilPhoneNumber"
+                app:errorEnabled="true"
                 android:hint="Phone Number"
-                android:inputType="phone"
-                android:padding="8dp"
-                android:textColor="@color/black"
-                android:textSize="14sp" />
+                app:startIconDrawable="@drawable/ic_baseline_phone_24"
+                app:startIconTint="@color/red">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="phone"
+                    android:maxLength="10"
+                    android:textSize="14sp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <!--City Entry Field-->
-            <EditText
+            <!--<EditText
                 android:id="@+id/edtCity"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -165,12 +190,35 @@
                 android:inputType="textAutoComplete"
                 android:padding="8dp"
                 android:textColor="@color/black"
-                android:textSize="14sp" />
+                android:textSize="14sp" />-->
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilAddress"
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:errorEnabled="true"
+                android:hint="Address"
+                android:inputType="textAutoComplete"
+
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:startIconDrawable="@drawable/ic_baseline_location_24"
+                app:startIconTint="@color/red">
+
+                <AutoCompleteTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="none"
+                    android:maxLines="2"
+                    android:focusableInTouchMode="false"
+                    android:id="@+id/actvAddress"
+                    android:textSize="14sp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <!--BirthDate Entry Field-->
 
             <!--City Entry Field-->
-            <EditText
+            <!--<EditText
                 android:id="@+id/edtBirthDate"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -181,39 +229,96 @@
                 android:hint="Birth Date"
                 android:padding="8dp"
                 android:textColor="@color/black"
-                android:textSize="14sp" />
-
-            <EditText
-                android:id="@+id/edtGender"
+                android:textSize="14sp" />-->
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:drawableStart="@drawable/ic_baseline_gender_24"
-                android:drawablePadding="8dp"
+                android:layout_height="wrap_content"
+
+                android:hint="Birth Date"
+                app:errorEnabled="true"
+                android:id="@+id/tilBirthDate"
+                app:startIconDrawable="@drawable/ic_baseline_birthdate"
+                app:startIconScaleType="center"
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+                app:startIconTint="@color/red">
+
+                <AutoCompleteTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusableInTouchMode="false"
+                    android:id="@+id/actvBirthDate"
+                    android:inputType="none"
+                    android:textSize="14sp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <!--<com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:hint="Gender"
-                android:padding="8dp"
-                android:textColor="@color/black"
-                android:textSize="14sp" />
+                android:id="@+id/tilGender"
+                app:startIconDrawable="@drawable/ic_baseline_gender_24"
+                app:startIconScaleType="center"
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                app:startIconTint="@color/red">
+
+                <AutoCompleteTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/actvBloodGroup"
+                    android:inputType="none"
+                    android:textSize="14sp" />
+            </com.google.android.material.textfield.TextInputLayout>-->
 
             <!--Blood Group Entry Field-->
-            <EditText
-                android:id="@+id/edtBloodGroup"
+            <!--Blood Group-->
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="2dp"
-                android:drawableStart="@drawable/ic_baseline_bloodtype_24"
-                android:drawablePadding="8dp"
+                android:layout_height="wrap_content"
+                app:errorEnabled="true"
                 android:hint="Blood Type"
-                android:padding="8dp"
-                android:textColor="@color/black"
-                android:textSize="14sp" />
+                android:id="@+id/tilBloodGroup"
+                app:startIconDrawable="@drawable/ic_baseline_bloodtype_24"
+                app:startIconScaleType="center"
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                app:startIconTint="@color/red">
+
+                <AutoCompleteTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/actvBloodGroup"
+                    android:inputType="none"
+                    android:textSize="14sp" />
+            </com.google.android.material.textfield.TextInputLayout>
+            <!--<com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilBloodGroup"
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                app:startIconDrawable="@drawable/ic_baseline_bloodtype_24"
+                app:startIconScaleType="center"
+                app:startIconTint="@color/red">
+
+                <AutoCompleteTextView
+                    android:id="@+id/actvBloodGroup"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="Blood Group"
+                    android:backgroundTint="@color/cream"
+                    android:drawablePadding="8dp"
+                    android:inputType="none"
+                    android:padding="8dp"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+            </com.google.android.material.textfield.TextInputLayout>-->
 
 
             <!--Save Button-->
             <Button
                 android:id="@+id/btnSave"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginHorizontal="30dp"
+                android:layout_height="45dp"
+                android:layout_marginHorizontal="80dp"
                 android:layout_marginTop="10dp"
                 android:text="Save"
                 android:textSize="16sp"
