--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -47,9 +47,40 @@
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:padding="8dp"
-            android:weightSum="3">
+            android:weightSum="2">
 
-                <LinearLayout
+
+
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_marginHorizontal="8dp"
+                android:padding="2dp"
+                android:layout_height="match_parent">
+
+<!--Blood Type-->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Blood Group"
+                    android:textColor="#F44336"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tvBloodGroup"
+                    android:text="AB +ve"
+                    android:drawablePadding="5dp"
+                    android:textColor="@color/black"
+
+                    android:textSize="14sp"/>
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
@@ -67,40 +98,18 @@
                     android:textSize="16sp"
                     />
 
- <!--Age-->
-                    <TextView
+                <!--Age-->
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tvAge"
                     android:text="19 Years"
-                        android:textColor="@color/black"
-                    android:textSize="14sp"/>
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:layout_marginHorizontal="8dp"
-                android:padding="2dp"
-                android:layout_height="match_parent">
-
-<!--Blood Type-->
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tvBloodGroup"
-                    android:text="AB +ve"
-                    android:drawablePadding="5dp"
                     android:textColor="@color/black"
-                    android:drawableLeft="@drawable/ic_baseline_bloodtype_24"
                     android:textSize="14sp"/>
+
             </LinearLayout>
 
-            <LinearLayout
+            <!--<LinearLayout
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
@@ -116,7 +125,7 @@
                     android:textStyle="bold"
                     android:textSize="16sp"/>
 
-<!--Gender-->
+&lt;!&ndash;Gender&ndash;&gt;
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -124,7 +133,7 @@
                     android:text="Male"
                     android:textColor="@color/black"
                     android:textSize="14sp"/>
-            </LinearLayout>
+            </LinearLayout>-->
 
 
 
@@ -285,6 +294,7 @@
     <Button
     android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="visible"
         android:id="@+id/btnEditProfile"
         android:layout_margin="5dp"
         android:drawableLeft="@drawable/ic_baseline_edit_24"
@@ -292,4 +302,4 @@
 
         />
 
-</LinearLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
