--- a/app/src/main/res/layout/fragment_blood_request.xml
+++ b/app/src/main/res/layout/fragment_blood_request.xml
@@ -1,65 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_sign_up"
-    android:orientation="vertical"
+    android:background="@color/pink"
     android:gravity="center"
-    tools:context=".RequestBloodActivity">
+    android:orientation="vertical"
+    tools:context=".BloodRequestFragment">
 
-
-<!--
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enter the following details :"
-        android:layout_marginHorizontal="30dp"
-        android:textColor="#F44336"
-        android:textSize="25sp"
-        android:textStyle="bold" />
--->
+        android:drawableLeft="@drawable/ic_baseline_blood_drop_24"
+        android:drawablePadding="5dp"
+        android:drawableTint="@color/cream"
+        android:elevation="50dp"
+        android:gravity="center"
+        android:text="BLOOD REQUEST"
+        android:textColor="#F3EED9"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/cardView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView5"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginHorizontal="30dp"
+        android:layout_height="229dp"
         android:layout_marginVertical="10dp"
+        android:layout_marginBottom="32dp"
         app:cardBackgroundColor="#F44336"
-        app:cardCornerRadius="10dp"
-        >
+        app:cardCornerRadius="100dp"
+        app:layout_constraintBottom_toTopOf="@+id/cardView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:padding="10dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:drawableLeft="@drawable/ic_baseline_blood_drop_24"
-                android:drawablePadding="5dp"
-                android:drawableTint="@color/cream"
-
-                android:gravity="center"
-                android:text="BLOOD REQUEST"
-                android:textColor="#F3EED9"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-
-
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+        android:id="@+id/cardView3"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="100dp"
         app:cardBackgroundColor="#F3EED9"
         app:cardCornerRadius="30dp"
-        app:cardElevation="20dp">
+        app:cardElevation="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <LinearLayout
@@ -70,15 +64,15 @@
             android:padding="20dp">
 
 
-<!--Blood Group-->
+            <!--Blood Group-->
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilName"
                 style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/tilName"
-                app:errorEnabled="true"
                 android:hint="Name"
+                app:errorEnabled="true"
                 app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
                 app:startIconTint="@color/red">
 
@@ -86,24 +80,24 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textSize="14sp" />
-            </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/tilPhoneNumber"
-                app:errorEnabled="true"
-                android:hint="Phone Number"
-                app:startIconDrawable="@drawable/ic_baseline_phone_24"
-                app:startIconTint="@color/red">
-
-                <com.google.android.material.textfield.TextInputEditText
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/tilPhoneNumber"
+                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="phone"
-                    android:maxLength="10"
-                    android:textSize="14sp" />
+                    android:layout_height="wrap_content"
+                    android:hint="Phone Number"
+                    app:errorEnabled="true"
+                    app:startIconDrawable="@drawable/ic_baseline_phone_24"
+                    app:startIconTint="@color/red">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:inputType="phone"
+                        android:maxLength="10"
+                        android:textSize="14sp" />
+                </com.google.android.material.textfield.TextInputLayout>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -111,75 +105,75 @@
                 style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:errorEnabled="true"
                 android:hint="Location"
                 android:inputType="textAutoComplete"
-
                 android:textColor="@color/black"
+
                 android:textSize="14sp"
+                app:errorEnabled="true"
                 app:startIconDrawable="@drawable/ic_baseline_location_24"
                 app:startIconTint="@color/red">
 
                 <AutoCompleteTextView
+                    android:id="@+id/actvLocation"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:focusableInTouchMode="false"
                     android:inputType="none"
                     android:maxLines="2"
-                    android:focusableInTouchMode="false"
-                    android:id="@+id/actvLocation"
                     android:textSize="14sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <!--Blood Group-->
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilBloodGroup"
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Blood Type"
                 app:errorEnabled="true"
-                android:id="@+id/tilBloodGroup"
                 app:startIconDrawable="@drawable/ic_baseline_bloodtype_24"
                 app:startIconScaleType="center"
-                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 app:startIconTint="@color/red">
 
                 <AutoCompleteTextView
+                    android:id="@+id/actvBloodGroup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/actvBloodGroup"
                     android:inputType="none"
                     android:textSize="14sp" />
             </com.google.android.material.textfield.TextInputLayout>
-<!--Urgency
+            <!--Urgency
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/tilUrgency"
+                            app:errorEnabled="true"
+                            app:startIconDrawable="@drawable/ic_baseline_alarm_24"
+                            app:startIconTint="@color/red">
+
+                            <com.google.android.material.textfield.TextInputEditText
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:hint="Urgency"
+                                android:textSize="14sp" />
+
+                        </com.google.android.material.textfield.TextInputLayout>-->
+
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilNote"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/tilUrgency"
+                android:hint="Note (optional)"
+                android:textColor="@color/black"
+                android:textSize="14sp"
                 app:errorEnabled="true"
-                app:startIconDrawable="@drawable/ic_baseline_alarm_24"
+                app:startIconDrawable="@drawable/ic_baseline_edit_note_24"
                 app:startIconTint="@color/red">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="Urgency"
-                    android:textSize="14sp" />
-
-            </com.google.android.material.textfield.TextInputLayout>-->
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/tilNote"
-                app:startIconDrawable="@drawable/ic_baseline_edit_note_24"
-                app:startIconTint="@color/red"
-                android:hint="Note (optional)"
-                android:textColor="@color/black"
-                app:errorEnabled="true"
-                android:textSize="14sp">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    />
+                    android:layout_height="match_parent" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
@@ -188,22 +182,15 @@
                 android:layout_height="60dp"
                 android:layout_marginHorizontal="40dp"
                 android:layout_marginTop="10dp"
+                android:elevation="30dp"
                 android:text="Request Blood"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:cornerRadius="60dp"
-                android:elevation="30dp"/>
-
+                app:cornerRadius="60dp" />
 
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
 
-
-
-
-
-
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
