--- a/app/src/main/res/layout/activity_request_accepted_user.xml
+++ b/app/src/main/res/layout/activity_request_accepted_user.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".RequestAcceptedUserActivity">
 
+    <fragment
+        android:id="@+id/google_map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
