--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,8 +10,8 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/materialTextView3"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
+        android:layout_width="244dp"
+        android:layout_height="43dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="44dp"
         android:elevation="50dp"
@@ -36,6 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView6"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_marginBottom="32dp"
@@ -48,7 +49,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/red"/>
+            android:background="@color/red" />
 
     </androidx.cardview.widget.CardView>
 
@@ -69,6 +70,26 @@
             android:layout_margin="2dp"
             android:scaleType="centerCrop"
             android:src="@drawable/baseline_notifications_none_24"
+            android:tint="@color/red" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/crdvLogOut"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        app:cardCornerRadius="80dp"
+        app:layout_constraintEnd_toStartOf="@+id/cardView"
+        app:layout_constraintTop_toBottomOf="@+id/crdvRequests">
+
+        <ImageView
+            android:id="@+id/imgvLogOut"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="2dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/baseline_logout_24"
             android:tint="@color/red" />
 
     </androidx.cardview.widget.CardView>
@@ -202,8 +223,19 @@
     </androidx.cardview.widget.CardView>
         <!--</LinearLayout>-->
 
-
-    <androidx.cardview.widget.CardView
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/vpHomePage"
+        android:layout_width="match_parent"
+        android:layout_height="368dp"
+        android:layout_marginTop="28dp"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
+        android:padding="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+    <!--<androidx.cardview.widget.CardView
         android:id="@+id/cardView4"
         android:layout_width="0dp"
         android:layout_height="323dp"
@@ -214,17 +246,6 @@
         app:cardCornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2">
-
-        <com.google.android.material.textview.MaterialTextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="20dp"
-            android:text="djhfkjhdfjhfjhdfhudhfjhudfhudhfuh"
-            android:textStyle="bold" />
-
-
-    </androidx.cardview.widget.CardView>
-
+        app:layout_constraintTop_toBottomOf="@+id/cardView2">-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
